--- a/Part 0/0_5.md
+++ b/Part 0/0_5.md
@@ -3,10 +3,8 @@ sequenceDiagram
     participant browser
     participant server
 
-    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
-    activate server
-    
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     activate server
     server-->>browser: the HTML file
     deactivate server
@@ -16,7 +14,7 @@ sequenceDiagram
     server-->>browser: the css file
     deactivate server
 
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
     activate server
     server-->>browser: the JavaScript file
     deactivate server
@@ -24,7 +22,7 @@ sequenceDiagram
     
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
-    server-->>browser: [{ "content": "New note", "date": "2024-1-2" }, ... ]
+    server-->>browser: [{ "content": "Hello world", "date": "2024-1-2" }, ... ]
     deactivate server
     
 ```
